<resources>
    <string name="app_name">ProyectoFinal</string>

    <string name="math_escape">Math Escape:</string>
    <string name="aventuras_con_n_meros">¡Aventuras con Números!</string>
    <string name="aventuras_con_10_n_meros">¡Aventuras con\nNúmeros!</string>

    <string name="boton_jugar">Jugar</string>
    <string name="para_padres">Para Padres</string>
    <string name="btn_padres_desc">Botón para padres</string>
    <string name="regresar">Regresar</string>
    <string name="men_para_padres">Menú Para Padres</string>
    <string name="selecciona_un_perfil">Selecciona un perfil</string>
    <string name="aqu_se_mostrar_el_historial_de_partidas_del_perfil_seleccionado">Aquí se mostrará el historial de partidas del perfil seleccionado.</string>
    <string name="crear_perfil">Crear Perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="foto">Foto:</string>
    <string name="nombre_del_perfil">Nombre del perfil</string>
    <string name="avatar_del_perfil">Avatar del perfil</string>
    <string name="guardar">Guardar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="perfil_2">Perfil 2</string>
    <string name="perfil_1">Perfil 1</string>
</resources>