<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_natural"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".Inicio">

    <com.fei.proyectofinal.OutlinedTextView
        android:id="@+id/titulo2"
        android:layout_width="251dp"
        android:layout_height="91dp"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="center"
        android:text="@string/aventuras_con_10_n_meros"
        android:textColor="#5B4D68"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <com.fei.proyectofinal.OutlinedTextView
        android:id="@+id/titulo1"
        android:layout_width="258dp"
        android:layout_height="51dp"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="center"
        android:text="@string/math_escape"
        android:textColor="#6A4BB3"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <com.fei.proyectofinal.OutlinedTextView
        android:id="@+id/txtParaPadres"
        android:layout_width="83dp"
        android:layout_height="19dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/fredoka_bold"
        android:gravity="center"
        android:text="@string/para_padres"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnPadres"
        app:layout_constraintEnd_toEndOf="@id/btnPadres"
        app:layout_constraintStart_toStartOf="@id/btnPadres" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPadres"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:text=""
        android:contentDescription="@string/btn_padres_desc"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        app:backgroundTint="#6F687C"
        app:cornerRadius="18dp"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_person_circle"
        app:iconTint="@android:color/white"
        app:iconSize="28dp"
        app:iconPadding="0dp"
        app:strokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJugar"
        android:layout_width="210dp"
        android:layout_height="85dp"
        android:fontFamily="@font/fredoka_bold"
        android:text="@string/boton_jugar"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:backgroundTint="#6A4BB3"
        app:cornerRadius="18dp"
        app:strokeColor="@android:color/white"
        app:strokeWidth="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

</androidx.constraintlayout.motion.widget.MotionLayout>